<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/activity_main2dialogdraw"
    android:padding="20dp">

    <TextView
        android:id="@+id/textDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-medium"
        android:text="@string/split"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textDialog1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-medium"
        android:text="@string/splitabout"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textDialog2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/fullbody"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textDialog3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-medium"
        android:text="@string/fullbodyabout"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="italic" />


</LinearLayout>